feat: cli Slack

--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -87,7 +87,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4.1.5
       - name: Allure Deployer Action
-        uses: ./packages/action
+        uses: ./scripts
         env:
           SLACK_TOKEN: ${{secrets.SLACK_TOKEN}}
           GOOGLE_CREDENTIALS_JSON: ${{ secrets.GCP_CREDENTIALS}}
