--- a/packages/action/package.json
+++ b/packages/action/package.json
@@ -10,6 +10,6 @@
   "type": "module",
   "private": true,
   "dependencies": {
-    "allure-deployer-shared": "~1.0.0"
+    "allure-deployer-shared": "file:../shared"
   }
 }
