--- a/packages/docker/package.json
+++ b/packages/docker/package.json
@@ -8,7 +8,7 @@
   },
   "type": "module",
   "dependencies": {
-    "allure-deployer-shared": "~1.0.0"
+    "allure-deployer-shared": "file:../shared"
   },
   "private": true,
   "files": [
