--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -1,6 +1,6 @@
 {
   "name": "allure-deployer-shared",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Allure Deployer CLI companion module ",
   "author": "Sokari Gillis-Harry",
   "license": "MIT",
@@ -14,7 +14,8 @@
     "build": "rm -rf ./dist && tsc -p tsconfig.json",
     "build:watch": "tsc --watch",
     "test": "NODE_OPTIONS=--experimental-vm-modules jest",
-    "coverage": "NODE_OPTIONS=--experimental-vm-modules jest --coverage"
+    "coverage": "NODE_OPTIONS=--experimental-vm-modules jest --coverage",
+    "prepublishOnly": "npm run build"
   },
   "type": "module",
   "main": "dist/index.js",
