fix: action workflow

--- a/.github/workflows/deploy-docker-action.yaml
+++ b/.github/workflows/deploy-docker-action.yaml
@@ -27,7 +27,9 @@ jobs:
         run: npm run test --workspaces
 
       - name: Compile JS
-        run: npm run build --workspaces
+        run: |
+          npm run build --workspace=packages/shared
+          npm run build --workspace=packages/action
 
       - name: Remove dev deps
         run: |
