--- a/.github/workflows/deploy-docker-action.yaml
+++ b/.github/workflows/deploy-docker-action.yaml
@@ -40,7 +40,7 @@ jobs:
         uses: docker/build-push-action@v6.10.0
         with:
           context: .
-          file: action.Dockerfile
+          file: ./dockerfiles/action.Dockerfile
           platforms: linux/amd64
           push: true
           tags: |
