--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -60,7 +60,7 @@ jobs:
         run: |
           docker run --rm \
           -e STORAGE_BUCKET=${{github.event.inputs.storage-bucket}} \
-          -e WEBSITE_ID=${{ github.event.inputs.website-id }} \
+          -e REPORT_ID=${{ github.event.inputs.website-id }} \
           -e WEBSITE_EXPIRES=${{ github.event.inputs.website-expires }} \
           -e KEEP_RETRIES=${{ github.event.inputs.keep-retries }} \
           -e KEEP_HISTORY=${{ github.event.inputs.keep-history }} \
@@ -77,14 +77,14 @@ jobs:
     steps:
       - uses: actions/checkout@v4.1.5
       - name: Allure Deployer Action
-        uses: cybersokari/allure-deployer-action@v1.0.1
+        uses: cybersokari/allure-deployer-action@v1.0.2
         env:
           SLACK_TOKEN: ${{secrets.SLACK_TOKEN}}
           GOOGLE_CREDENTIALS_JSON: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
         with:
           allure_results_path: '/assets/allure-results'
           storage_bucket: ${{github.event.inputs.storage-bucket}}
-          website_id: ${{ github.event.inputs.website-id }}
+          report_id: ${{ github.event.inputs.website-id }}
           website_expires: ${{github.event.inputs.website-expires}}
           slack_channel_id: ${{secrets.SLACK_CHANNEL_ID}}
           keep_history: ${{github.event.inputs.keep-history}}
