--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -34,9 +34,9 @@
     "archiver": "^7.0.1",
     "async-mutex": "^0.5.0",
     "chalk": "^5.3.0",
+    "firebase-tools": "^13.29.1",
     "p-limit": "^6.1.0",
-    "unzipper": "^0.12.3",
-    "firebase-tools": "^13.29.1"
+    "unzipper": "^0.12.3"
   },
   "devDependencies": {
     "@types/archiver": "^6.0.3",
