--- a/.github/workflows/deploy-docker-action.yaml
+++ b/.github/workflows/deploy-docker-action.yaml
@@ -1,6 +1,7 @@
 name: Build GitHub Action
 on:
   workflow_dispatch:
+    inputs:
       semver:
         description: Bump version
         required: true
@@ -21,34 +22,11 @@ jobs:
           username: ${{ vars.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Set up Nodejs
-        uses: actions/setup-node@v4
-        with:
-          node-version: 22
-
-      - name: Install deps
-        run: |
-          npm install --workspace=allure-deployer-shared
-          npm install --workspace=@allure/action
-
-      - name: Run test
-        run: npm run test --workspaces
-
-      - name: Compile JS
-        run: |
-          npm run build --workspace=packages/shared
-          npm run build --workspace=packages/action
-
-      - name: Remove dev deps
-        run: |
-          npm install --workspace=allure-deployer-shared --omit=dev
-          npm install --workspace=@allure/action --omit=dev
-
       - name: Build and push
         uses: docker/build-push-action@v6.10.0
         with:
           context: .
-          file: ./dockerfiles/action.Dockerfile
+          file: ./packages/action/action.Dockerfile
           platforms: linux/amd64
           push: true
           tags: |
