--- a/.github/workflows/deploy-npm.yaml
+++ b/.github/workflows/deploy-npm.yaml
@@ -25,7 +25,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4.1.5
       - name: Setup Node.js
-      - uses: actions/setup-node@v4
+        uses: actions/setup-node@v4
         with:
           node-version: '20'
 
@@ -67,7 +67,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4.1.5
       - name: Setup Node.js
-      - uses: actions/setup-node@v4
+        uses: actions/setup-node@v4
         with:
           node-version: '20'
 
