--- a/.github/workflows/example-site-build.yaml
+++ b/.github/workflows/example-site-build.yaml
@@ -6,7 +6,7 @@ on:
   schedule:
     - cron: '0 0 27 * *'
 jobs:
-  test-action:
+  example-report:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4.1.5
