--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -36,6 +36,7 @@
     "chalk": "^5.3.0",
     "firebase-tools": "^13.29.1",
     "p-limit": "^6.1.0",
+    "random-words": "^2.0.1",
     "unzipper": "^0.12.3"
   },
   "devDependencies": {
