--- a/.github/workflows/deploy-npm.yaml
+++ b/.github/workflows/deploy-npm.yaml
@@ -54,8 +54,9 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config --global user.name "GitHub Actions Bot"
+          git config --global user.email "actions@github.com"
+          git remote set-url origin https://x-access-token:${{ secrets.PERSONAL_ACCESS_TOKEN }}@github.com/cybersokari/allure-report-deployer.git
           git add .
           git commit -m "Release packages/cli version ${{steps.publish.outputs.version}}"
           git push origin main
@@ -93,12 +94,13 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          git config user.email "github-actions[bot]@users.noreply.github.com"
+          
+          git config --global user.name "GitHub Actions Bot"
+          git config --global user.email "actions@github.com"
           git remote set-url origin https://x-access-token:${{ secrets.PERSONAL_ACCESS_TOKEN }}@github.com/cybersokari/allure-report-deployer.git
           git add .
           git commit -m "Release packages/shared version ${{steps.publish.outputs.version}}"
           git push origin main
-        
 
 
           
