--- a/.github/workflows/deploy-npm.yaml
+++ b/.github/workflows/deploy-npm.yaml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Install deps
         run: |
-          npm install --workspace=@allure/cli
+          npm install --workspace=allure-deployer
 
       - name: Run test
         run: npm run test --workspace=packages/cli
