--- a/.github/workflows/deploy-docker-action.yaml
+++ b/.github/workflows/deploy-docker-action.yaml
@@ -7,9 +7,9 @@ on:
         required: true
         type: choice
         options:
-          - major
-          - minor
           - patch
+          - minor
+          - major
 
 jobs:
   deploy-docker-action:
@@ -30,5 +30,5 @@ jobs:
           platforms: linux/amd64
           push: true
           tags: |
-            sokari/allure-deployer-action:latest
+            sokari/allure-deployer-action:${{vars}}
             sokari/allure-deployer-action:${{ github.sha }}
