--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "allure-deployer",
-  "version": "1.0.6",
+  "version": "1.1.0",
   "description": "Deploy your Allure Reports to Firebase, and notify in Slack, No server required",
   "keywords": [
     "allure server",
@@ -39,7 +39,7 @@
     "ora": "^8.1.1"
   },
   "devDependencies": {
-    "@types/conf": "^3.0.3"
+    "typescript": "^4.9.0"
   },
   "bin": {
     "allure-deployer": "dist/index.js"
