--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -54,9 +54,8 @@ jobs:
         run: |
           docker run --rm \
           -e STORAGE_BUCKET=${{github.event.inputs.storage-bucket}} \
-          -e WEBSITE_EXPIRES=${{ github.event.inputs.website-expires }} \
-          -e KEEP_RETRIES=${{ github.event.inputs.keep-retries }} \
-          -e KEEP_HISTORY=${{ github.event.inputs.keep-history }} \
+          -e SHOW_RETRIES=${{ github.event.inputs.show-retries }} \
+          -e SHOW_HISTORY=${{ github.event.inputs.show-history }} \
           -e SLACK_TOKEN=${{secrets.SLACK_TOKEN}} \
           -e SLACK_CHANNEL_ID=${{secrets.SLACK_CHANNEL_ID}} \
           -v $GITHUB_STEP_SUMMARY:/github/summary.txt \
@@ -70,7 +69,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4.1.5
       - name: Allure Deployer Action
-        uses: cybersokari/allure-deployer-action@v1.0.2
+        uses: cybersokari/allure-deployer-action@v1.1.2
         env:
           SLACK_TOKEN: ${{secrets.SLACK_TOKEN}}
           GOOGLE_CREDENTIALS_JSON: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
@@ -79,8 +78,9 @@ jobs:
           storage_bucket: ${{github.event.inputs.storage-bucket}}
           website_expires: ${{github.event.inputs.website-expires}}
           slack_channel_id: ${{secrets.SLACK_CHANNEL_ID}}
-          keep_history: ${{github.event.inputs.keep-history}}
-          keep_results: ${{github.event.inputs.keep-results}}
+          show_history: ${{github.event.inputs.keep-history}}
+          show_results: ${{github.event.inputs.keep-results}}
+          prefix: ${{github.event.inputs.prefix}}
 
   test-action-local:
     if: ${{ github.event.inputs.job == 'test-action-local' }}
